--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,28 @@
+html {
+    background-image: url('../images/pixar-bg.jpg');
+    background-color: #9fb9de;
+    background-position: center center;
+    background-repeat: no-repeat;
+    text-shadow: 0.25px 0.25px #fff;
+    height: 100%;
+    background-size: cover;
+}
+body {
+    width: 100%;
+    max-width: 100%;
+    background-color: transparent !important;
+    padding: 20px;
+    margin: 40px auto !important;
+    border-radius: 5px;
+}
+.jumbotron {
+    background: transparent !important;
+    margin-bottom: 0px !important;
+    background-color: rgba(255,255,255,0.5) !important;
+    padding: 40px !important;
+    min-height: 80%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 80vh; /* These two lines are counted as one :-)       */
+}
 #title {
     margin-bottom: 20px;
     text-align: center;
@@ -22,4 +47,8 @@
 #pixarGIFs .gifDiv img {
     width: 100%;
     padding: 20px;
+}
+button#more {
+    display: none;
+    margin: auto;
 }
