--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,12 +43,28 @@ body {
 #pixarGIFs .gifDiv {
     display: inline-block;
     width: 300px;
+    max-width: 100%;
+    padding: 20px;
+}
+#pixarGIFs .gifDiv p {
+    text-align: left;
 }
 #pixarGIFs .gifDiv img {
     width: 100%;
-    padding: 20px;
 }
 button#more {
     display: none;
     margin: auto;
+}
+.movieBtn {
+    width: 130px;
+    border-radius: 5px;
+    border: none;
+    background: #ccc;
+    transition: 0.3s;
+}
+.movieBtn:hover {
+    background: #000;
+    color: #fff;
+    transition: 0.3s;
 }
